--- a/public/index.html
+++ b/public/index.html
@@ -22,4 +22,7 @@
     <div id="modal"></div>
     <div id="root"></div>
   </body>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
+  <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js" type="text/javascript"></script>
 </html>
