--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta
-      content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no"
+      content="minimum-scale=1.0, width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no"
       name="viewport"
     />
 
